--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,8 @@ target_link_libraries(${ProjectName}
     pico_stdlib 
     FreeRTOS-Kernel-Heap4 
     hardware_i2c
+    hardware_pwm
+    hardware_clocks
     )
 
 pico_add_extra_outputs(${ProjectName})
